# OpenMPDemo

./: CMakeLists.txt  README.md  convolve.h  greyscale.h  main.cpp  savepgm.h
